--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "test": "electron-mocha --recursive tests -R spec && electron-mocha --renderer --recursive tests -R spec",
     "lint": "eslint ./src/**/*.js; exit 0"
   },
+  "homepage": "https://github.com/ran-y/electron-storage",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:ran-y/electron-storage.git"
+  },
   "keywords": [
     "electron",
     "storage",
